CSS created to style second page. Adding spacing, made designs more responsive and search forms. Corrected front page styles to forms and titles sizes as well. Cleaned up css no longer needing.

--- a/css/style.css
+++ b/css/style.css
@@ -34,48 +34,47 @@ body {
   /* replaces with full width background color and border for global search */
   /* line 24, ../sass/header.scss */
   div#global-search {
-    background-color: rgba(9, 9, 9, 0.9);
-    border-bottom: 2px solid #000;
+    padding-top: 1%;
   }
 }
 /****************
 	Logo Area
 *****************/
-/* line 33, ../sass/header.scss */
+/* line 34, ../sass/header.scss */
 .dc_logo {
   float: right;
 }
 
 @media screen and (max-width: 767px) {
-  /* line 37, ../sass/header.scss */
+  /* line 38, ../sass/header.scss */
   .dc_logo {
     float: left;
   }
 }
-/* line 42, ../sass/header.scss */
+/* line 43, ../sass/header.scss */
 div#DC-logo {
   margin-top: 1%;
 }
 
-/* line 45, ../sass/header.scss */
+/* line 46, ../sass/header.scss */
 .navbar.container {
   background-color: white;
 }
 
-/* line 49, ../sass/header.scss */
+/* line 50, ../sass/header.scss */
 header#navbar {
   margin-bottom: 0px;
   margin-top: 0px;
 }
 
-/* line 53, ../sass/header.scss */
+/* line 54, ../sass/header.scss */
 a.name.navbar-brand {
   font-family: Pinyon Script;
   font-size: large;
   text-shadow: 1px 1px 1px #aaa;
 }
 
-/* line 59, ../sass/header.scss */
+/* line 60, ../sass/header.scss */
 .navbar-default {
   border: none;
 }
@@ -83,21 +82,21 @@ a.name.navbar-brand {
 /******************
 	Feat. Image
 ******************/
-/* line 66, ../sass/header.scss */
+/* line 67, ../sass/header.scss */
 div#featured-image {
   width: 85%;
   margin-left: auto;
   margin-right: auto;
 }
 
-/* line 71, ../sass/header.scss */
+/* line 72, ../sass/header.scss */
 img#featured_image {
   width: 80%;
   position: relative;
   z-index: 1;
 }
 
-/* line 78, ../sass/header.scss */
+/* line 79, ../sass/header.scss */
 div#global-search {
   position: relative;
   z-index: 2;
@@ -107,21 +106,21 @@ div#global-search {
   margin-left: auto;
   margin-right: auto;
 }
-/* line 86, ../sass/header.scss */
+/* line 87, ../sass/header.scss */
 div#global-search a {
   color: #e18c24;
   font-size: small;
 }
 
 /* creates shorter wideth background for global search */
-/* line 92, ../sass/header.scss */
+/* line 93, ../sass/header.scss */
 .region.region-global-search {
   background-color: rgba(9, 9, 9, 0.5);
   border-bottom: 2px solid #000;
   height: 40px;
 }
 
-/* line 98, ../sass/header.scss */
+/* line 99, ../sass/header.scss */
 .image_details.pull-right {
   padding-top: 10px;
   padding-right: 10px;
@@ -234,20 +233,56 @@ div#footer {
   div#global-search {
     margin-top: 0px;
     z-index: 0;
+    margin-bottom: 2%;
+    margin-top: 1%;
+  }
+
+  /* responsive width of global search form */
+  /* line 21, ../sass/content.scss */
+  section#block-webform-client-block-9 {
+    width: 100% !important;
+  }
+
+  /* second page collection search */
+  /* line 25, ../sass/content.scss */
+  .form-item.webform-component.webform-component-textfield.webform-component--collections-search.form-group.form-item.form-item-submitted-collections-search.form-type-textfield.form-group {
+    margin-top: 4%;
+    margin-bottom: 4%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /** spacing **/
+  /* collection subjects */
+  /* line 33, ../sass/content.scss */
+  .field.field-name-field-col-collection-subjects.field-type-taxonomy-term-reference.field-label-above {
+    padding-bottom: 1%;
+  }
+
+  /* paragraph text */
+  /* line 37, ../sass/content.scss */
+  .field.field-name-body.field-type-text-with-summary.field-label-hidden {
+    padding-bottom: 1%;
+  }
+
+  /* removes extra margin space above title of collection */
+  /* line 41, ../sass/content.scss */
+  .main-container > div > .col-sm-12 > h2#page-title {
+    margin-top: 0px;
   }
 }
 /*******************************************
 	Front Page Global Collection Search
 ********************************************/
 /* Centers the Global Search Bar */
-/* line 27, ../sass/content.scss */
+/* line 50, ../sass/content.scss */
 section#block-webform-client-block-9 {
-  width: 50%;
+  width: 58%;
   margin: 0 auto;
   padding-top: 3px;
 }
 
-/* line 32, ../sass/content.scss */
+/* line 55, ../sass/content.scss */
 button.webform-submit.button-primary.btn.btn-primary.form-submit {
   display: none;
 }
@@ -255,7 +290,7 @@ button.webform-submit.button-primary.btn.btn-primary.form-submit {
 /**************************
 		Flexslider
 **************************/
-/* line 39, ../sass/content.scss */
+/* line 62, ../sass/content.scss */
 div#flexslider-1 {
   border: 0px;
   margin-bottom: 0px;
@@ -265,21 +300,21 @@ div#flexslider-1 {
 		Collections List/View
 **************************************/
 /*** Button Styles ***/
-/* line 48, ../sass/content.scss */
+/* line 71, ../sass/content.scss */
 #views-bootstrap-thumbnail-1 > div > div > .thumbnail > .caption > .btn-primary {
   background-color: cadetblue;
   border-color: green;
   width: 80%;
 }
 
-/* line 53, ../sass/content.scss */
+/* line 76, ../sass/content.scss */
 #views-bootstrap-thumbnail-1 > div > div > .thumbnail > .caption > .btn-primary:hover {
   background-color: #467779;
   border-color: #22393a;
 }
 
 /* button alignment */
-/* line 58, ../sass/content.scss */
+/* line 81, ../sass/content.scss */
 a.btn.btn-primary.center-block {
   position: absolute;
   margin-bottom: 12%;
@@ -290,13 +325,13 @@ a.btn.btn-primary.center-block {
 }
 
 /* Height of Views */
-/* line 67, ../sass/content.scss */
+/* line 90, ../sass/content.scss */
 #views-bootstrap-thumbnail-1 > div > div > .thumbnail {
   height: 400px;
 }
 
 /*** Image in View ***/
-/* line 71, ../sass/content.scss */
+/* line 94, ../sass/content.scss */
 .thumbnail > img, .thumbnail a > img {
   width: 200px;
   height: 115px;
@@ -304,12 +339,12 @@ a.btn.btn-primary.center-block {
 }
 
 /* Title size */
-/* line 77, ../sass/content.scss */
+/* line 100, ../sass/content.scss */
 .thumbnail > .caption > h3 > a {
   font-size: large;
 }
 
-/* line 80, ../sass/content.scss */
+/* line 103, ../sass/content.scss */
 .thumbnail > .caption > h3 {
   margin-top: 5px;
 }
@@ -318,27 +353,36 @@ a.btn.btn-primary.center-block {
 	   Second Page Styles
 *******************************/
 /* Centering Image */
-/* line 87, ../sass/content.scss */
+/* line 110, ../sass/content.scss */
 #block-system-main > div > div > div > div > div > div > img.img-responsive {
-  /*
-      display: block;
-      margin-right: auto;
-      margin-left: auto;
-  */
   padding-bottom: 1%;
 }
 
 /* Adjust title font size */
-/* line 97, ../sass/content.scss */
-#block-system-main > div > div > div > div > div > div > h2 {
+/* line 114, ../sass/content.scss */
+#block-system-main > div > div > div > div > div > div > h2, h2#page-title {
   font-size: 24px;
 }
 
 /* Adds padding around paragraph below image */
-/* line 101, ../sass/content.scss */
+/* line 118, ../sass/content.scss */
 #block-system-main > div > div > div > div > div > div > p {
-  padding-bottom: 2%;
+  padding-bottom: 1%;
   padding-top: 1%;
+}
+
+/* Adds padding below collections abb: content */
+/* line 123, ../sass/content.scss */
+.field.field-name-field-collection-abb-.field-type-text.field-label-above {
+  padding-bottom: 2%;
+}
+
+/* Collection Search Bar */
+/* line 127, ../sass/content.scss */
+.form-item.webform-component.webform-component-textfield.webform-component--collections-search.form-group.form-item.form-item-submitted-collections-search.form-type-textfield.form-group {
+  width: 80%;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 
 /*
