--- a/sass/header.scss
+++ b/sass/header.scss
@@ -22,8 +22,9 @@ body {
 	}
 	/* replaces with full width background color and border for global search */
 	div#global-search {
-		background-color: rgba( 9, 9, 9, .9);
-		border-bottom: 2px solid #000;
+// 		background-color: rgba( 9, 9, 9, .9);
+// 		border-bottom: 2px solid #000;
+		padding-top: 1%;
 	}
 }
 /****************
